--- a/accounting/templates/accounting/includes/add-account-app/template.html
+++ b/accounting/templates/accounting/includes/add-account-app/template.html
@@ -25,8 +25,8 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label for="">نام</label>
-                                <input type="text" required class="form-control" v-model="name">
+                                <label for="">عنوان</label>
+                                <input type="text" required class="form-control" v-model="title">
                             </div>
                         </div>
                         <div class="col-md-3">
