--- a/accounting/templates/accounting/includes/set-account-parent-app/script.html
+++ b/accounting/templates/accounting/includes/set-account-parent-app/script.html
@@ -49,7 +49,7 @@
                     
                     
                     console.log(data.parent)
-                    // location.href = data.account.get_absolute_url
+                    location.href = data.account.get_absolute_url
                 })
             },
 
