--- a/accounting/templates/accounting/includes/account-app/media.html
+++ b/accounting/templates/accounting/includes/account-app/media.html
@@ -4,7 +4,7 @@
     <div class="media-body mr-2">
         <h5 :class="'text-'+account.color">
             <a :href="account.get_absolute_url">
-                <span :class="'text-'+account.color" v-text="account.name"></span>
+                <span :class="'text-'+account.color" v-text="account.title"></span>
                 <span :class="'badge badge-'+account.color" v-text="account.type"></span>
             </a>
         </h5>
