--- a/projectmanager/templates/projectmanager/project.html
+++ b/projectmanager/templates/projectmanager/project.html
@@ -2,8 +2,7 @@
 <div class="row rtl">
   <div class="col-md-3">
     {% include "projectmanager/includes/project-app/card.html" %}
-    {% include "core/includes/page-thumbnail-header-app/template.html" %}
-
+     {% include "core/includes/page-thumbnail-header-app/template.html" %}
   </div>
   <div class="col-md-9">
     <div class="row rtl">
@@ -22,7 +21,7 @@
         {% include "attachments/includes/downloads-app/template.html" %}
       </div>
 
-       <div class="col-md-6">
+      <div class="col-md-6">
         {% include "attachments/includes/locations-app/template.html" %}
       </div>
     </div>
@@ -34,33 +33,26 @@
   </div>
   {% endif %}
 
-  <div class="col-md-12 ">
+  <div class="col-md-12">
     {% include "accounting/includes/invoices-app/template.html" %}
   </div>
-  <div class="col-md-12 ">
-    {% include "core/includes/page-related-app/template.html" %}
+  <div class="col-md-12">
+    {% include "projectmanager/includes/project-edit-app/template.html" %}
   </div>
 
   <div class="col-md-12">
     {% include "projectmanager/includes/remote-clients-app/template.html" %}
-  </div>
+  </div> 
+  <div class="col-md-12">
+    {% include "core/includes/page-related-app/template.html" %}
+  </div> 
 </div>
 
-{% endblock content %}
-
-
-{% block script %}
+{% endblock content %} {% block script %}
 <script>
-  let project_id=parseInt("{{project.id}} ")
+  let project_id = parseInt("{{project.id}} ");
+  let project = "{{project_s|escapejs}} ";
 </script>
 
-{% if add_invoice_form %}
-{% include "accounting/includes/add-invoice-app/script.html" %}
-{% endif %}
-
-{% include "projectmanager/includes/remote-clients-app/script.html" %}
-
-{% include "accounting/includes/invoices-app/script.html" %}
-{% include "core/includes/page-app/script.html" %}
-
-{% endblock script %}
+{% include "projectmanager/includes/project-app/script.html" %}
+ {% endblock script %}
