--- a/organization/templates/organization/includes/add-organization-unit-app/template.html
+++ b/organization/templates/organization/includes/add-organization-unit-app/template.html
@@ -51,14 +51,14 @@
                 </div>
 
                 <div class="col-6 mt-3">
-                  <a :href="account.get_absolute_url" v-if="account.id">
+                  <a :href="account.get_absolute_url" v-if="account.logo">
                     <div class="media">
                       <img :src="account.logo" width="64" alt="" />
                       <div class="mr-2 media-body">
                         <h5 class="my-2">
                           <span
                             :class="'text-'+account.color"
-                            v-text="account.name"
+                            v-text="account.title"
                           ></span>
                         </h5>
                         <h6>
