--- a/accounting/templates/accounting/selection.html
+++ b/accounting/templates/accounting/selection.html
@@ -46,7 +46,7 @@
                                 </div>
                                 <div>
 
-                                    <span v-text="account_group.name"></span>
+                                    <span v-text="account_group.title"></span>
                                     <span v-html="to_price(account_group.balance)"></span>
 
                                 </div>
@@ -92,7 +92,7 @@
                                 </div>
                                 <div>
 
-                                    <span v-text="basic_account.name"></span>
+                                    <span v-text="basic_account.title"></span>
 
                                     <span v-html="to_price(basic_account.balance)"></span>
                                 </div>
@@ -142,7 +142,7 @@
                                 </div>
                                 <div>
 
-                                    <span v-text="moein_account.name"></span>
+                                    <span v-text="moein_account.title"></span>
 
                                     <span v-html="to_price(moein_account.balance)"></span>
                                 </div>
@@ -176,7 +176,7 @@
                             <span v-text="moein_account2.code"></span>
                         </div>
                         <div>
-                            <span v-text="moein_account2.name"></span>
+                            <span v-text="moein_account2.title"></span>
                             <span v-html="to_price(moein_account2.balance)"></span>
                         </div>
                     </a>
