--- a/core/templates/core/includes/page-app/card-contents.html
+++ b/core/templates/core/includes/page-app/card-contents.html
@@ -4,10 +4,12 @@
 </h5>
 <img src="{{page.thumbnail}}" width="128"  alt="" />
 <div class="my-3">
-
+  
   <h5>{{page.title}}</h5>
   
-  <small class="text-muted">{{page.class_title}}</small>
+  <a href="{{page.get_absolute_url}}">
+    <small class="text-muted2">{{page.class_title}}</small>
+  </a>
 </div>
 <div>{% include "attachments/includes/page-like-app/template.html" %}</div>
 <div class="my-3">
