--- a/core/templates/core/includes/page-app/script.html
+++ b/core/templates/core/includes/page-app/script.html
@@ -5,6 +5,7 @@
 
 {% include "core/includes/page-thumbnail-header-app/script.html" %}
 
+{% include "attachments/includes/tags-app/script.html" %}
 {% include "attachments/includes/comments-app/script.html" %}
 {% include "attachments/includes/links-app/script.html" %}
 {% include "attachments/includes/images-app/script.html" %}
