add invoice line item app updated message view updated

--- a/accounting/templates/accounting/product.html
+++ b/accounting/templates/accounting/product.html
@@ -30,6 +30,12 @@
     {% include "accounting/includes/product-specifications-app/template.html" %}
 
   </div>
+
+  
+  <div class="col-md-4">
+    {% include "attachments/includes/tags-app/template.html" %}
+
+  </div>
   <div class="col-md-12">
     {% include "attachments/includes/images-app/template.html" %}
 
