--- a/accounting/templates/accounting/includes/add-invoice-line-app/script.html
+++ b/accounting/templates/accounting/includes/add-invoice-line-app/script.html
@@ -7,6 +7,7 @@
     data: {
       invoice_line_item_id: 0,
       invoice_line_items: invoice_line_items_for_add_invoice_line_items_app,
+      invoice_line_item_units: [],
       unit_price: 0,
       default11: false,
       coef: 1,
@@ -17,6 +18,9 @@
       search_for: "",
       buffer_items: [],
       list_length: 6,
+      waiting: false,
+      message: { show: false },
+      show_add_btn: true,
     },
     methods: {
       more: function () {
@@ -28,15 +32,15 @@
         add_invoice_line_app.filter();
       },
       select_item: function (invoice_line_item) {
-        console.log(invoice_line_item);
-        add_invoice_line_app.invoice_line_item_id = invoice_line_item.id;
-        add_invoice_line_app.unit_name = invoice_line_item.unit_name;
-        add_invoice_line_app.unit_price = invoice_line_item.unit_price;
+        add_invoice_line_app.invoice_line_item_id = invoice_line_item.id
+        add_invoice_line_app.unit_name = invoice_line_item.unit_name
+        add_invoice_line_app.unit_price = invoice_line_item.unit_price
+        add_invoice_line_app.invoice_line_items = [invoice_line_item]
+        add_invoice_line_app.buffer_items = [invoice_line_item]
       },
       filter: function () {
         if (add_invoice_line_app.search_for.length < 1) return;
         let search_for = add_invoice_line_app.search_for.toUpperCase();
-        console.log(search_for);
         add_invoice_line_app.invoice_line_items =
           invoice_line_items_for_add_invoice_line_items_app.filter(function (
             invoice_line_item
@@ -60,22 +64,13 @@
             add_invoice_line_app.invoice_line_items[0].id;
         }
       },
-      select_invoice_line_item: function () {
-        invoice_line_items_for_add_invoice_line_items_app.forEach(
-          (invoice_line_item) => {
-            if (
-              invoice_line_item.id == add_invoice_line_app.invoice_line_item_id
-            ) {
-              add_invoice_line_app.price = invoice_line_item.price;
-            }
-          }
-        );
-      },
       to_price: function (vall) {
         return to_price(vall);
       },
-
       add_invoice_line: function () {
+        add_invoice_line_app.show_add_btn = false
+        add_invoice_line_app.waiting = true
+        add_invoice_line_app.message.show = false
         let payload = {
           csrfmiddlewaretoken: csrfmiddlewaretoken,
           invoice_id: invoice_id,
@@ -89,12 +84,32 @@
           discount_percentage: this.discount_percentage,
         };
 
-        console.log(payload);
         let url = "{% url 'accounting:add_invoice_line' %}";
         let posting = $.post(url, payload);
         posting.done((data) => {
-          console.log(data);
+
+
+
+          add_invoice_line_app.waiting = false
+          if (data.result != "SUCCEED") {
+            setTimeout(() => {
+              add_invoice_line_app.show_add_btn = true
+            }, 1000);
+            title = 'خطا'
+            body = data.message
+            show_message(add_invoice_line_app, title, body, 'danger', 2000)
+          }
+
           if (data.result === "SUCCEED") {
+
+            setTimeout(() => {
+              add_invoice_line_app.show_add_btn = true
+              add_invoice_line_app.quantity = 0
+
+            }, 2000);
+            title = 'موفق'
+            body = data.message
+            show_message(add_invoice_line_app, title, body, 'success', 2000)
             if (typeof invoice_lines_app != "undefined") {
               invoice_lines_app.invoice_lines.push(data.invoice_line);
               invoice_lines_app.calculate_total();
