--- a/accounting/templates/accounting/includes/add-invoice-line-app/template.html
+++ b/accounting/templates/accounting/includes/add-invoice-line-app/template.html
@@ -18,32 +18,59 @@
 
           <div class="col-md-12">
             <div class="form-group">
-              <label for="">جستجو</label>
+              <label for="">جستجوی آیتم </label>
               <input v-model="search_for" @input="filter()" class="form-control">
 
             </div>
           </div>
           <div class="col-md-12">
-            <div class="row rtl">
-              <div class="col-md-4" v-for="invoice_line_item in buffer_items">
-                <button class="btn btn-info my-2" @click="select_item(invoice_line_item)">
-                  <span v-text="invoice_line_item.title"></span>
-                  هر
-                  <span v-text="invoice_line_item.unit_name"></span>
-                  <span v-text="to_price(invoice_line_item.unit_price)"></span>
-                  {{CURRENCY}}
-                </button>
-              </div>
+            <div class="table-responsive">
+              <table class="table table-striped">
+                <tbody>
+                  <tr v-for="invoice_line_item in buffer_items">
+                    <td>
+                      <button class="btn btn-info my-2" @click="select_item(invoice_line_item)">
+                        انتخاب
+                      </button>
+                    </td>
+                    <td>
+                      <a target="_blank" :href="invoice_line_item.get_absolute_url">
+                        <div class="media">
+                          <img :src="invoice_line_item.thumbnail" width="48" class="rounded" alt="">
+                          <div class="media-body mr-2">
 
-              <div class="col-md-12">
-                <button class="btn btn-info my-2" @click="more()" v-show="list_length<7">
-                  بیشتر
-                </button>
-                <button class="btn btn-info my-2" @click="less()" v-show="list_length>6">
-                  کمتر
-                </button>
-              </div>
+                            <h5 v-text="invoice_line_item.title"></h5>
+                            <h6>
+                              هر
+                              <span v-text="invoice_line_item.unit_name"></span>
+                              <span v-text="to_price(invoice_line_item.unit_price)"></span>
+                              {{CURRENCY}}
+                            </h6>
+                          </div>
+                        </div>
+                      </a>
+
+                    </td>
+                   
+                  </tr>
+                </tbody>
+              </table>
             </div>
+            <div class="col-md-12 " v-if="!buffer_items.length>list_length">
+              <button class="btn btn-success my-2" @click="more()" v-show="list_length<7">
+                بیشتر
+              </button>
+              <button class="btn btn-danger my-2" @click="less()" v-show="list_length>6">
+                کمتر
+              </button>
+            </div>
+            <div class="col-md-12 " v-if="buffer_items.length>list_length">
+             1111111111111111
+            </div>
+            <div class="col-md-12 " v-if="!buffer_items.length>list_length">
+             2222222222222222
+            </div>
+
           </div>
         </div>
         <div>
@@ -56,10 +83,10 @@
 
             <div class="col-md-12">
               <div class="form-group">
-                <label for="">آیتم</label>
-                <select v-model="invoice_line_item_id" class="form-control">
+                <label for="">آیتم</label> 
+                <select disabled v-model="invoice_line_item_id" class="form-control">
                   <option :value="invoice_line_item.id" v-for="invoice_line_item in invoice_line_items"
-                    v-text=" invoice_line_item.title +' هر '+invoice_line_item.unit_name+ '  ' +to_price(invoice_line_item.unit_price) + '{{CURRENCY}}' ">
+                    v-text=" invoice_line_item.title">
                   </option>
                 </select>
               </div>
@@ -134,11 +161,51 @@
 
               {{CURRENCY}}
             </div>
-            <div class="col-md-12">
+            <div class="col-md-12" v-if="show_add_btn && quantity>0 && unit_price>0">
               <button class="btn btn-success" type="submit">
                 <i class="fa fa-plus"></i>
                 افزودن
               </button>
+            </div>
+
+            <div class="col-md-12" v-if="waiting">
+              {% load static %}
+              <img src="{% static 'leo/img/loading' %}" width="48" alt="">
+            </div>
+            <div class="col-md-12 my-2" v-if="message.show">
+              <div :class="'alert alert-'+message.color">
+                <h4 class="my-2" v-text="message.title">
+                </h4>
+                <div v-html="message.body">
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-md-12 my-2" v-if="invoice_line_item_id==0 || !unit_price>0 || !quantity>0">
+              <div class="alert alert-warning">
+                <h5 class="my-2">
+                  داده های ورودی را اصلاح کنید.
+                </h5>
+                <div>
+                  <ul class="rtl">
+                    <li class="text-right rtl" v-if="invoice_line_item_id==0">
+                      آیتم را جستجو و انتخاب کنید.
+
+                    </li>
+
+                     <li class="text-right rtl" v-if="!quantity>0">
+                      تعداد را وارد کنید.
+
+                    </li>
+                    <li class="text-right rtl" v-if="!unit_price>0">
+                      قیمت را وارد کنید.
+
+                    </li>
+                  </ul>
+
+                </div>
+              </div>
             </div>
           </div>
         </form>
