--- a/accounting/templates/accounting/invoice-line-item.html
+++ b/accounting/templates/accounting/invoice-line-item.html
@@ -10,6 +10,21 @@
   <div class="col-md-12">
     {% include "accounting/includes/invoice-lines-app/template.html" %}
   </div>
+  
+  <div class="col-md-4">
+    {% include "attachments/includes/links-app/template.html" %}
+
+  </div>
+  
+  <div class="col-md-4">
+    {% include "attachments/includes/downloads-app/template.html" %}
+
+  </div>
+  
+  <div class="col-md-4">
+    {% include "attachments/includes/tags-app/template.html" %}
+
+  </div>
 
   <div class="col-md-12"></div>
 </div>
