--- a/core/templates/core/includes/page-app/card-contents.html
+++ b/core/templates/core/includes/page-app/card-contents.html
@@ -2,23 +2,18 @@
 <h5>
   <a href="{% url 'core:page' pk=page.pk %}"> page: {{page.title}} </a>
 </h5>
-<img src="{{page.thumbnail}}" width="128"  alt="" />
+<img src="{{page.thumbnail}}" width="128" alt="" />
 <div class="my-3">
-  
+
   <h5>{{page.title}}</h5>
-  
+
   <a href="{{page.get_absolute_url}}">
     <small class="text-muted2">{{page.class_title}}</small>
   </a>
 </div>
 <div>{% include "attachments/includes/page-like-app/template.html" %}</div>
 <div class="my-3">
-  <form
-    action="https://www.google.com/search"
-    method="get"
-    target="_blank"
-    id="search-form"
-  >
+  <form action="https://www.google.com/search" method="get" target="_blank" id="search-form">
     <input name="q" type="hidden" value="{{page.title}}" />
     <button type="submit" class="btn btn-link p-0">
       <img src="{% static 'img/icons/google.png' %}" width="32" alt="" />
@@ -29,24 +24,14 @@
 </div>
 
 <div>
-{% if perms.core.change_page %}
-  <a
-    href="{{page.get_edit_url}}"
-    class="my-2 text-warning mx-2"
-    title="ویرایش"
-    target="_blank"
-  >
+  {% if perms.core.change_page %}
+  <a href="{{page.get_edit_url}}" class="my-2 text-warning mx-2" title="ویرایش" target="_blank">
     <i class="fa fa-edit text-warning"></i>
     ویرایش
-  </a> 
-{% endif %} {% if perms.core.delete_page %}
- 
-  <a
-    href="{{page.get_delete_url}}"
-    class="my-2 text-danger mx-2"
-    title="حذف"
-    target="_blank"
-  >
+  </a>
+  {% endif %} {% if perms.core.delete_page %}
+
+  <a href="{{page.get_delete_url}}" class="my-2 text-danger mx-2" title="حذف" target="_blank">
     <i class="fa fa-trash text-danger"></i>
     حذف
   </a>
