--- a/core/templates/core/message.html
+++ b/core/templates/core/message.html
@@ -12,9 +12,14 @@
                 <p class="text-center">
                     {{message.body}}
                 </p>
-                <p>
-                    <a href="{{back_url}}">بازگشت</a>
-                </p>
+                
+                {% for link in links %}
+
+                <a class="btn btn-{{link.color}}" href="{{link.url}}">
+                    {{link.title}}
+                </a>
+                {% endfor %}
+                <a class="btn btn-primary" href="{{back_url}}">بازگشت</a>
             </div>
         </div>
     </div>
