--- a/accounting/templates/accounting/includes/add-invoice-line-app/template.html
+++ b/accounting/templates/accounting/includes/add-invoice-line-app/template.html
@@ -23,11 +23,20 @@
 
             </div>
           </div>
+          
+        <div  class="col-md-12">
+          <a target="_blank" class="mx-2" href="{% url 'accounting:products' %}">همه کالاها</a>
+          <a target="_blank" class="mx-2" href="{% url 'accounting:services' %}">همه خدمات</a>
+        </div>
+
           <div class="col-md-12">
             <div class="table-responsive">
               <table class="table table-striped">
                 <tbody>
-                  <tr v-for="invoice_line_item in buffer_items">
+                  <tr v-for="(invoice_line_item, index) in buffer_items" :key="invoice_line_item.id">
+                    <td>
+                      <span v-text="index + 1"></span>
+                    </td>
                     <td>
                       <button class="btn btn-info my-2" @click="select_item(invoice_line_item)">
                         انتخاب
@@ -56,26 +65,23 @@
                 </tbody>
               </table>
             </div>
-            <div class="col-md-12 " v-if="!buffer_items.length>list_length">
-              <button class="btn btn-success my-2" @click="more()" v-show="list_length<7">
+            <div class="col-md-12 " v-if="invoice_line_items.length>list_length">
+              <button class="btn btn-success my-2" @click="more()" v-if="search_for">
                 بیشتر
               </button>
-              <button class="btn btn-danger my-2" @click="less()" v-show="list_length>6">
+              
+            </div>
+
+            
+            <div class="col-md-12 " v-if="invoice_line_items.length>=list_length">
+            
+              <button class="btn btn-danger my-2" @click="less()" v-if="list_length>6">
                 کمتر
               </button>
             </div>
-            <div class="col-md-12 " v-if="buffer_items.length>list_length">
-             1111111111111111
-            </div>
-            <div class="col-md-12 " v-if="!buffer_items.length>list_length">
-             2222222222222222
-            </div>
+             
 
           </div>
-        </div>
-        <div>
-          <a target="_blank" class="mx-2" href="{% url 'accounting:products' %}">همه کالاها</a>
-          <a target="_blank" class="mx-2" href="{% url 'accounting:services' %}">همه خدمات</a>
         </div>
         <form @submit.prevent="add_invoice_line()">
           <div class="row">
@@ -144,13 +150,13 @@
             </div>
             <div class="col-md-4">
               <div class="form-group">
-                <label for="">ذخیره</label>
+                <label for="">ذخیره قیمت در آیتم</label>
                 <input type="checkbox" class="form-control" v-model="save" />
               </div>
             </div>
             <div class="col-md-3">
               <div class="form-group">
-                <label for="">پیش فرض</label>
+                <label for="">قیمت پیش فرض آیتم</label>
                 <input type="checkbox" class="form-control" v-model="default11" />
               </div>
             </div>
