--- a/accounting/templates/accounting/invoice-print.html
+++ b/accounting/templates/accounting/invoice-print.html
@@ -8,49 +8,88 @@
       <div class="card-body">
         <h5 class="text-center">{{invoice.title}}</h5>
         <div class="text-center">
-            
+
         </div>
         <div class="row rtl">
-            <div class="col-md-8">
-                <div>
+          <div class="col-md-8">
+            <div>
 
-                    فروشنده
-                    :
-                     {{invoice.bestankar.name}} 
-                </div>
-
-                <div>
-
-                    خریدار
-                    :
-                     {{invoice.bedehkar.name}} 
-                </div>
+              فروشنده
+              :
+              {{invoice.bestankar.name}}
             </div>
-            <div class="col-md-4">
-                <div>
-                    تاریخ :
 
-                {{invoice.persian_event_datetime}}
-                </div>
+            <div>
 
-                
-                <div>
-                    شماره :
-
-                {{invoice.id}}
-                    
-                </div>
+              خریدار
+              :
+              {{invoice.bedehkar.name}}
             </div>
+          </div>
+          <div class="col-md-4">
+            <div>
+              تاریخ :
+
+              {{invoice.persian_event_datetime}}
+            </div>
+
+
+            <div>
+              شماره :
+
+              {{invoice.id}}
+
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="col-md-12"> 
+  <div class="col-md-12">
 
     {% include "accounting/includes/invoice-lines-app/print-template.html" %}
 
   </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+
+
+        <p class="text-center">
+          فروشنده 
+          <br>
+           {{invoice.bestankar.title}}
+        </p>
+
+
+
+        <div class="mb-5">&nbsp;</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card farsi">
+      <div class="card-body">
+
+
+        <p class="text-center">
+          خریدار 
+          <br>
+          {{invoice.bedehkar.title}}
+        </p>
+
+
+
+        <div class="mb-5">&nbsp;</div>
+
+      </div>
+    </div>
+  </div>
+  
 </div>
 {% endblock content %}
 {% block script %}
@@ -61,7 +100,3 @@
 {% include "accounting/includes/invoice-lines-app/script.html" %}
 {% include "accounting/includes/invoice-app/script.html" %}
 {% endblock script %}
-
-
-
-
