--- a/accounting/templates/accounting/includes/product-app/card-contents.html
+++ b/accounting/templates/accounting/includes/product-app/card-contents.html
@@ -4,6 +4,22 @@
     کالا : {{product.title}}
   </a>
 </h5>
+{% if product.brand %}
+  
+<h5>
+  برند : 
+  <a href="{% url 'accounting:brand' pk=product.brand.id %}">
+    {{product.brand}}
+  </a>
+</h5>
+
+{% endif %}
+{% if product.model %}
+  
+<h5>
+  مدل : {{product.model}}
+</h5>
+{% endif %}
 {% for spec in product.productspecification_set.all %}
 <div>
   {{spec.name}} : {{spec.value}}
