--- a/accounting/templates/accounting/settings.html
+++ b/accounting/templates/accounting/settings.html
@@ -45,10 +45,10 @@
         </div>
     </div>
 
-    {% if import_products_from_excel_form %}
+    {% if import_from_excel_form %}
 
     <div class="col-md-6">
-        {% include "accounting/includes/import-products-from-excel/template.html" %}
+        {% include "accounting/includes/import-from-excel/template.html" %}
     </div>
     {% endif %}
 </div>
@@ -114,8 +114,8 @@
         }
     })
 </script>
-{% if import_products_from_excel_form %}
+{% if import_from_excel_form %}
 
-{% include "accounting/includes/import-products-from-excel/script.html" %}
+{% include "accounting/includes/import-from-excel/script.html" %}
 {% endif %}
 {% endblock script %}
