--- a/core/templates/core/includes/page-app/card-contents.html
+++ b/core/templates/core/includes/page-app/card-contents.html
@@ -11,6 +11,9 @@
     <small class="text-muted2">{{page.class_title}}</small>
   </a>
 </div>
+<div>
+  <img width="128" src="{{page.get_qrcode_url}}" alt="">
+</div>
 <div>{% include "attachments/includes/page-like-app/template.html" %}</div>
 <div class="my-3">
   <form action="https://www.google.com/search" method="get" target="_blank" id="search-form">
