--- a/accounting/templates/accounting/includes/account-app/script.html
+++ b/accounting/templates/accounting/includes/account-app/script.html
@@ -45,4 +45,16 @@
     })
 </script>
 
+
+{% include "core/includes/page-app/script.html" %}
+{% include "accounting/includes/financial-events-app/script.html" %}
+
+{% include "accounting/includes/accounts-app/script.html" %}
+{% include "accounting/includes/add-account-app/script.html" %}
+{% include "accounting/includes/financial-document-lines-app/script.html" %}
+
+{% if add_financial_document_line_form %}
+{% include "accounting/includes/add-financial-document-line-app/script.html" %}
+{% endif %}
+
     
