--- a/accounting/templates/accounting/includes/account-app/card.html
+++ b/accounting/templates/accounting/includes/account-app/card.html
@@ -38,7 +38,7 @@
             <small class="text-muted">
                 مانده : 
             </small>
-            {{account.balance|to_price_color|safe}}
+            {{account.balance|to_price_color|safe}} {{CURRENCY}}
 
         </h5>
     </div>
