--- a/accounting/templates/accounting/search.html
+++ b/accounting/templates/accounting/search.html
@@ -17,6 +17,15 @@
     </div>
     {% endif %}
 
+    
+
+    {% if services %}
+    <div class="col-md-12">
+        {% include "accounting/includes/services-app/template.html" %}
+    </div>
+    {% endif %}
+
+
 
     {% if categories %}
     <div class="col-md-12">
@@ -55,15 +64,18 @@
 
 
 {% if products %}
-{% include "accounting/includes/products-app/list-script.html" %}
-
+    {% include "accounting/includes/products-app/list-script.html" %}
 {% endif %}
 
 
 {% if categories %}
-{% include "accounting/includes/categories-app/list-script.html" %}
-
+    {% include "accounting/includes/categories-app/list-script.html" %}
 {% endif %}
+
+{% if services %}
+    {% include "accounting/includes/services-app/script.html" %}
+{% endif %}
+
 
 <script>
     let log = '{{log}}'
