--- a/accounting/templates/accounting/account.html
+++ b/accounting/templates/accounting/account.html
@@ -6,6 +6,9 @@
     <div class="col-md-4">
         {% include "accounting/includes/account-app/card.html" %}
     </div>
+    <div class="col-md-4">
+        {% include "accounting/includes/account-app/card-full.html" %}
+    </div>
 
     <div class="col-md-12">
         {% include "accounting/includes/accounts-app/template.html" %}
