--- a/market/templates/market/includes/menus-app/template.html
+++ b/market/templates/market/includes/menus-app/template.html
@@ -47,7 +47,7 @@
                 <td>
                      
                       <a :href="menu.supplier.get_absolute_url">
-                    <span v-text="menu.supplier.account.full_name"></span>
+                    <span v-text="menu.supplier.account.title"></span>
                   </a>
                 </td>
 
