--- a/market/templates/market/includes/product-app/main-shop.html
+++ b/market/templates/market/includes/product-app/main-shop.html
@@ -1,7 +1,10 @@
 
 {% if primary_shop %}
     <button class="btn btn-danger">
-
+        هر 
+        {{primary_shop.unit_name}}
+        {{primary_shop.unit_price}}
+        {{CURRENCY}}
     </button>
 {% else %}
 <div class="my-3 Showcase_no_seller__M8XOL">این محصول فعلا فروشنده‌ای ندارد</div>
