--- a/accounting/templates/accounting/person-account.html
+++ b/accounting/templates/accounting/person-account.html
@@ -6,6 +6,11 @@
     <div class="col-md-4">
         {% include "accounting/includes/person-account-app/card.html" %}
     </div>
+    
+    <div class="col-md-4">
+        {% include "accounting/includes/account-app/card-full.html" %}
+    </div>
+
     <div class="col-md-4">
         {% include "accounting/includes/person-account-app/category.html" %}
     </div>
