--- a/attachments/templates/attachments/index.html
+++ b/attachments/templates/attachments/index.html
@@ -20,6 +20,16 @@
         </a>
     </div>
 
+    
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'attachments:tags' %}">
+            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                تگ ها
+            </h6>
+        </a>
+    </div>
+
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'attachments:comments' %}">
             <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
